feat: add layout course

--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,7 +1,71 @@
 {
   "store.product": {
     "children": [
-      
+      "breadcrumb",
+      "flex-layout.row#main",
+      "flex-layout.row#shipping"
+    ]
+  },
+  "flex-layout.row#main": {
+    "props": {
+      "marginTop": 6
+    },
+    "children": [
+      "flex-layout.col#left",
+      "flex-layout.col#right"
+    ]
+  },
+  "flex-layout.col#left": {
+    "children": [
+      "product-images"
+    ]
+  },
+  "flex-layout.col#right": {
+    "props": {
+      "preventVerticalStretch": true,
+      "verticalAlign": "middle"
+    },
+    "children": [
+      "product-name",
+      "product-identifier.product",
+      "product-price",
+      "flex-layout.row#qty-sku"
+    ]
+  },
+  "product-price": {
+    "props": {
+      "showSavings": true,
+      "showListPrice": true
+    }
+  },
+  "flex-layout.row#qty-sku": {
+    "props": {
+      "paddingTop": 4,
+      "paddingBottom": 4
+    },
+    "children": [
+      "flex-layout.col#buy"
+    ]
+  },
+  "flex-layout.col#buy": {
+    "props": {
+      "horizontalAlign": "left",
+      "verticalAlign": "middle",
+      "paddingRight": 4
+    },
+    "children": [
+      "sku-selector",
+      "product-quantity",
+      "buy-button"
+    ]
+  },
+  "flex-layout.row#shipping": {
+    "props": {
+      "paddingTop": 1,
+      "paddingBottom": 1
+    },
+    "children": [
+      "shipping-simulator"
     ]
   }
 }
