--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -6,9 +6,11 @@
       "info-card#button-right",
       "slider-layout#home",
       "tab-layout#home",
+      "stack-layout#cta",
       "responsive-layout.desktop#desktop",
       "responsive-layout.mobile#mobile",
-      "modal-trigger#first"
+      "modal-trigger#first",
+      "list-context.product-list"
     ]
   },
   "flex-layout.row#head": {
@@ -132,6 +134,61 @@
   "rich-text#hello": {
     "props": {
       "text": "Hola, esto es un texto perrón dentro de un modal"
+    }
+  },
+  "list-context.product-list": {
+    "blocks": [
+      "product-summary.shelf"
+    ],
+    "children": [
+      "slider-layout"
+    ]
+  },
+  "product-summary.shelf": {
+    "children": [
+      "modal-trigger#quickview",
+      "product-summary-name",
+      "product-selling-price"
+    ]
+  },
+  "modal-trigger#quickview": {
+    "children": [
+      "product-summary-image",
+      "modal-layout#quickview"
+    ]
+  },
+  "modal-layout#quickview": {
+    "children": [
+      "product-summary-name",
+      "product-images",
+      "product-summary-sku-selector",
+      "product-summary-quantity",
+      "add-to-cart-button"
+    ]
+  },
+  "stack-layout#cta": {
+    "children": [
+      "image#cta",
+      "link#cta"
+    ]
+  },
+  "image#cta": {
+    "props": {
+      "blockClass": "cover",
+      "width": "100%",
+      "height": 400,
+      "src": "https://appliancetheme.vtexassets.com/assets/app/src/appliancecat___1b7592b49667c6a89203a0997e06bc87.jpg"
+    }
+  },
+  "link#cta": {
+    "props": {
+      "displayMode": "button",
+      "buttonProps": {
+        "variant": "primary",
+        "size": "large"
+      },
+      "href": "/washer",
+      "label": "Check these awesome discounts"
     }
   }
 }
