--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -3,7 +3,8 @@
     "children": [
       "breadcrumb",
       "flex-layout.row#main",
-      "flex-layout.row#shipping"
+      "flex-layout.row#shipping",
+      "condition-layout.product"
     ]
   },
   "flex-layout.row#main": {
@@ -67,5 +68,26 @@
     "children": [
       "shipping-simulator"
     ]
+  },
+  "condition-layout.product": {
+    "props": {
+      "conditions": [
+        {
+          "subject": "categoryId",
+          "arguments": {
+            "id": "37"
+          }
+        }
+      ],
+      "Then": "image#retro-mixer-banner"
+    }
+  },
+  "image#retro-mixer-banner": {
+    "props": {
+      "src": "https://appliancetheme.vtexassets.com/assets/app/src/retroimage___92a8271aac7c51d2059193bdbe019016.jpg",
+      "width": "100%",
+      "height": "200px",
+      "blockClass": "cover"
+    }
   }
 }
